
- Bug fixes:

  * Fix for wrong reported size of deleted files with 'autoclean' on 32-bit
    arches (Closes: #499872)

- Documentation:

  * Quick help (help.txt):

    * Document 'l' (Limit Display) in quick help (Closes: #514541)

    * Improve the description of the search shortcut, and point more clearly to
      search patterns in the full documentation

  * Guide/User's Manual:

    * Generate 'alt' tag for images in HTML documentation (see #496724)

- Internal changes:

  * search_graph.h, fix problem with code which was working for many years (with
    boost 1.55 and many versions before), but now the straightforward option to
    convert boost::optional to bool does not work with gcc-5.2 and boost-1.58,
    so use .is_initialized() instead.

  * solution_item.cc, copy string of package name coming from libapt because it
    does not guarantee that the string is valid for all of the time span that we
    need it, to not show garbage that it happens sometimes
    (Closes: #795150, #795028)

  * match.cc, pkg_info_screen.cc, reason_fragment.cc: remove and modify code
    relying on pkg.Section() (from apt PkgIterator), it is deprecated code and
    it will get removed soon according to the apt team (Versions have Sections,
    Package in abstract doesn't have unique Sections)

  * aptitude_resolver.cc: use std::unique_ptr instead of deprecated SPtrArray

  * Add compatibility for APT 1.1:

    * Create DepIterator values from Dependency pointers on-the-fly, where required

    * Adjust AcqQueuedFile() for changed signatures of overriden methods

  * Improving C++11 compatibilty mode:

    * Convert std::auto_ptr (deprecated in C++11) to unique_ptr

    * Convert boost::scoped_ptr (deprecated in C++11) to std::unique_ptr

    * Convert instances of boost::shared_ptr, make_shared, and weak_ptr to be
      explicitly prefixed by boost::, otherwise they clash or have problems
      compiling with the new C++11 std::shared_ptr and analogues (many were not