@@ -1,7 +1,7 @@
 <?xml version="1.0" standalone="no"?>
 
-<!DOCTYPE book PUBLIC "-//OASIS//DTD DocBook XML V4.2//EN" 
-"file:///usr/share/xml/docbook/schema/dtd/4.2/docbookx.dtd" [
+<!DOCTYPE book PUBLIC "-//OASIS//DTD DocBook XML V4.5//EN"
+"file:///usr/share/xml/docbook/schema/dtd/4.5/docbookx.dtd" [
   <!ENTITY aptitude "<command>aptitude</command>">
   <!ENTITY apt '<systemitem class="library">apt</systemitem>'>
   <!ENTITY dselect '<command>dselect</command>'>
