@@ -17,6 +17,8 @@ Version 0.7.1 UNRELASED
 
   * Guide/User's Manual:
 
+    * Upgrade doc/??/aptitude.xml documents from DocBook XML 4.2 to 4.5
+
     * Generate 'alt' tag for images in HTML documentation (see #496724)
 
 - Internal changes:
